--- a/css/game.css
+++ b/css/game.css
@@ -2,7 +2,7 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-image: url('../images/castelo.jpg');
+    background-image: url('../images/fundo-b.png');
     background-size: cover;
     min-height: 100vh;
     align-items: center;
@@ -58,7 +58,7 @@ main {
   }
   
   .back {
-    background-image: url('../images/back.jpg');
+    background-image: url('../images/back\ barbie\ 2.jpg');
     backface-visibility: hidden;
   }
   
